Added required files

--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,10 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
+.Hero {
+  font-size: x-large;
+  color: blue;
+}
 .App-link {
   color: #61dafb;
 }
