--- a/src/App.css
+++ b/src/App.css
@@ -44,59 +44,11 @@
   gap: 20px;
 }
 
-.header {
-  grid-column: 1 / 4; /* Spans all 3 columns */
-  background-color: lightgray;
-  padding: 20px;
-  text-align: center;
-  display: flex;
-  justify-content: center;
-}
-
-.main {
-  grid-column: 2 / 3; /* Main content in the middle column */
-  background-color: lightblue;
-  padding: 20px;
-}
-
 .footer {
   grid-column: 1 / 4;
   background-color: lightcoral;
   padding: 20px;
   text-align: center;
-}
-
-/* Container for the navbar */
-.navbar {
-  padding: 10px;
-}
-
-/* Unordered list (nav items container) */
-.nav-list {
-  display: flex; /* Make the list items align horizontally */
-  list-style: none; /* Remove the default list bullets */
-  padding: 0;
-  margin: 0;
-  justify-content: center;
-}
-
-/* Nav items (list items) */
-.nav-list li {
-  margin-right: 20px; /* Add space between items */
-}
-
-/* Links inside nav items */
-.nav-list li a {
-  color: rgb(20, 16, 16);
-  text-decoration: none; /* Remove underlines from links */
-  font-size: 18px;
-  padding: 10px 15px;
-}
-
-/* Optional: Hover effect */
-.nav-list li a:hover {
-  background-color: #555;
-  border-radius: 4px;
 }
 
 @media (max-width: 768px) {
@@ -110,4 +62,458 @@
   .footer {
     grid-column: 1 / 2; /* All items span across the single column */
   }
+}
+
+.nav-bar {
+  align-items: center;
+  border-bottom: 2px solid #495e57;
+  grid-template-columns: auto auto auto;
+  height: 6.25rem;
+  max-width: none;
+  padding: 0 6%;
+  width: 100%;
+}
+
+.nav-bar-logo {
+  align-self: center;
+  grid-column: 1;
+  justify-self: start;
+  line-height: 0;
+}
+
+.nav-bar-logo img {
+  height: 2.75rem;
+  width: 10rem;
+}
+
+.nav-bar-hamburger {
+  background-color: initial;
+  color: #495e57;
+  cursor: pointer;
+  display: none;
+  grid-column: 2;
+}
+
+.nav-bar-hamburger svg {
+  height: 1.875rem;
+  width: 1.875rem;
+}
+
+.nav-bar-links {
+  align-items: center;
+  -webkit-column-gap: 1.5rem;
+  column-gap: 1.5rem;
+  display: flex;
+  grid-column: 3;
+  justify-content: flex-end;
+  transition: left 0.3s linear;
+}
+
+.nav-bar-links li {
+  font-weight: 600;
+  list-style-type: none;
+}
+
+.hover-underline-animation {
+  display: inline-block;
+  position: relative;
+}
+
+.nav-bar-links a {
+  height: -webkit-max-content;
+  height: max-content;
+  text-transform: uppercase;
+}
+
+.hover-underline-animation:after {
+  background-color: #495e57;
+  bottom: 0;
+  content: '';
+  height: 2px;
+  left: 0;
+  position: absolute;
+  -webkit-transform: scaleX(0);
+  transform: scaleX(0);
+  -webkit-transform-origin: bottom right;
+  transform-origin: bottom right;
+  transition: -webkit-transform 0.25s ease-out;
+  transition: transform 0.25s ease-out;
+  transition: transform 0.25s ease-out, -webkit-transform 0.25s ease-out;
+  width: 100%;
+}
+
+.hero {
+  background-color: #495e47;
+  padding-top: 1.875rem;
+}
+
+.hero .hero-container {
+  gap: 3.5rem;
+  grid-template-columns: 1fr 1fr;
+}
+
+.hero-container {
+  margin: 0 auto;
+  max-width: 61.75rem;
+  width: 90%;
+}
+
+.hero-content {
+  grid-column: 1;
+}
+
+.hero-content h1 {
+  color: #f4ce14;
+  font-size: 3.5rem;
+  height: 2.5rem;
+  line-height: 2.5rem;
+}
+
+.hero-content h2 {
+  color: #fff;
+  font-size: 2.25rem;
+  height: 2.25rem;
+  line-height: 2.25rem;
+}
+
+.hero-content p {
+  color: #fff;
+  font-size: 1.125rem;
+  margin-top: 1.5rem;
+}
+
+.hero-content .button-primary {
+  display: inline-block;
+  margin-top: 2rem;
+}
+
+.hero-image {
+  border-radius: 1rem;
+  grid-column: 2;
+  height: 24rem;
+  justify-self: end;
+  margin-bottom: -4.375rem;
+  object-fit: cover;
+  width: 100%;
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr; /* 1 column*/
+  grid-template-rows: auto;
+  gap: 20px;
+}
+
+.grid-container div {
+  background-color: #edefee;
+  padding: 20px;
+  text-align: center;
+  max-width: 200px;
+  min-height: 200px;
+  border: 1px solid #ccc; /* Optional: Add a border for visibility */
+}
+
+.grids-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr; /* 1 column*/
+  gap: 20px;
+}
+
+.grids-container div {
+  background-color: edefee;
+  padding: 20px;
+  text-align: center;
+  border: 1px solid #ccc; /* Optional: Add a border for visibility */
+}
+
+.description {
+  display: flex;
+  background-color: #edefee;
+}
+
+.week-specials {
+  gap: 1.25rem;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: auto auto;
+  padding: 8rem 0 4rem;
+}
+
+.week-specials-header {
+  align-items: center;
+  display: flex;
+  gap: 1rem;
+  grid-column: 1 / 4;
+  grid-row: 1;
+  justify-content: space-between;
+  margin-bottom: 1.5rem;
+}
+
+.week-specials-header h2 {
+  font-family: Markazi Text;
+  font-size: 2.5rem;
+  font-weight: 400;
+  line-height: 1;
+}
+
+.recipe {
+  width: 27ch;
+}
+
+.meal-card {
+  background-color: #edefee;
+  border-radius: 1rem;
+  box-shadow: 0 0 15px #d9d9d9;
+  display: flex;
+  flex-direction: column;
+  grid-column: auto;
+  grid-row: 2;
+  min-height: 31.25rem;
+  overflow: hidden;
+  padding-bottom: 1.5rem;
+}
+
+.meal-card-image {
+  height: 12.5rem;
+  overflow: hidden;
+  position: relative;
+}
+
+.meal-card-image img {
+  height: 12.5rem;
+  left: 0;
+  object-fit: cover;
+  object-position: 50% 5%;
+  position: absolute;
+  top: 0;
+  transition: all 0.3s linear;
+  width: 100%;
+}
+
+.meal-card-header {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  padding: 1rem;
+}
+.meal-card-header h3 {
+  font-size: 1.125rem;
+}
+
+.meal-card-header span {
+  color: #ee9972;
+  font-weight: 700;
+}
+
+.meal-card-body-footer {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+  justify-content: space-between;
+}
+
+.meal-card-body-footer a {
+  font-weight: 700;
+}
+.meal-card-body-footer svg {
+  margin-left: 0.5rem;
+}
+
+.reviews {
+  justify-content: center;
+}
+
+.testimonials {
+  background-color: #495e57;
+  padding: 2rem 0;
+}
+
+.testimonials .container {
+  -webkit-column-gap: 1.25rem;
+  column-gap: 1.25rem;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: auto auto;
+  row-gap: 1.5rem;
+}
+
+.testimonials h2 {
+  color: #fff;
+  grid-column: 1 / 5;
+  grid-row: 1;
+}
+
+.testimonial-card {
+  background-color: #fff;
+  border-radius: 1rem;
+  display: flex;
+  flex-direction: column;
+  grid-column: auto;
+  grid-row: 2;
+  height: 100%;
+  padding: 1rem;
+}
+.testimonial-card:first-of-type img {
+  object-position: 50% 0;
+}
+
+.testimonial-card h4 {
+  padding-bottom: 0.5rem;
+  text-align: center;
+}
+
+.testimonial-card span {
+  align-items: center;
+  display: flex;
+}
+
+.testimonial-card svg {
+  color: #f4ce14;
+  font-size: 1.25rem;
+  height: 1.25rem;
+  width: 1.25rem;
+}
+
+.testimonial-card span p {
+  padding-left: 1rem;
+}
+
+.testimonial-card img {
+  border-radius: 50%;
+  height: 8rem;
+  margin: 0 auto 0.5rem;
+  object-fit: cover;
+  width: 8rem;
+}
+
+.responsive-icon {
+  width: 100%;
+  max-width: 50px; /* Set a small maximum size */
+  height: auto; /* Maintain aspect ratio */
+}
+
+.meal-card-body-footer {
+  padding: 0 1rem;
+}
+
+.our-story {
+  gap: 2.5rem;
+  grid-template-columns: 1fr 1fr;
+  padding: 8rem 0 4rem;
+}
+
+.our-story-description {
+  grid-column: 1;
+}
+
+h2 {
+  font-size: 2.5rem;
+}
+.our-story-description p {
+  padding-top: 1.5rem;
+}
+
+.our-story-chefs {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  grid-column: 2;
+  height: 25.5rem;
+  margin: auto 0;
+  position: relative;
+}
+
+.our-story-chefs img:first-of-type {
+  right: 0;
+  top: 0;
+}
+
+.our-story-chefs img {
+  border-radius: 1rem;
+  height: 15.75rem;
+  object-fit: cover;
+  object-position: 78% 50%;
+  position: absolute;
+  width: 23.5rem;
+}
+.our-story-chefs img:nth-of-type(2) {
+  bottom: 0;
+  left: 0;
+}
+
+.site-footer {
+  grid-gap: 2rem;
+  background-color: #495e57;
+  color: #fff;
+  display: grid;
+  gap: 2rem;
+  grid-template-columns: repeat(4, minmax(6rem, max-content));
+  height: 18rem;
+  justify-content: space-evenly;
+  padding: 2.5rem 6%;
+}
+.site-footer-logo {
+  width: 6rem;
+}
+.site-footer h4 {
+  letter-spacing: 1px;
+  margin-bottom: 0.5rem;
+  text-transform: uppercase;
+}
+.site-footer-nav ul {
+  list-style-type: none;
+}
+.site-footer-nav li {
+  margin-bottom: 0.25rem;
+}
+.site-footer a {
+  color: #fff;
+}
+.site-footer h4 {
+  letter-spacing: 1px;
+  margin-bottom: 0.5rem;
+  text-transform: uppercase;
+}
+
+.site-footer-contact p {
+  margin-bottom: 0.25rem;
+}
+.site-footer a {
+  color: #fff;
+}
+.site-footer-social svg {
+  margin-right: 1rem;
+}
+.site-footer-contact svg {
+  margin-right: 0.5rem;
+}
+
+.reservations form {
+  grid-gap: 1.5rem;
+  align-items: center;
+  display: grid;
+  gap: 2.5rem;
+  grid-template-columns: repeat(2, minmax(12.5rem, 1fr));
+  padding: 2rem 2rem 2rem;
+  width: 100%;
+}
+
+.form-field {
+  display: flex;
+  flex-direction: column;
+  gap: 0.25rem;
+}
+
+.reservations form button {
+  grid-column: 1 / span 2;
+  margin: 0 auto;
+  width: -webkit-max-content;
+  width: max-content;
+}
+
+.reservations {
+  min-height: calc(100vh - 24.25rem);
+}
+
+.reservations h2 {
+  text-align: center;
+  font-size: 2.5rem;
 }
